--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,9 @@
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "^7.0",
-        "laravel/tinker": "^2.0"
+        "laravel/tinker": "^2.0",
+        "myclabs/php-enum": "^1.7",
+        "webmozart/assert": "^1.9"
     },
     "require-dev": {
         "barryvdh/laravel-ide-helper": "^2.7",
