--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "^7.0",
         "laravel/tinker": "^2.0",
+        "league/fractal": "^0.19.2",
         "myclabs/php-enum": "^1.7",
         "webmozart/assert": "^1.9"
     },
